<resources>
    <string name="app_name">StudyBuddy</string>
    <string name="facebook_application_id" translatable="false">193850071018532</string>
    <string name="profile_pic_setter">ProfilePicSetter</string>
    <string name="first_name_setter">FirstNameSetter</string>
    <string name="first_name_setter_hint">First Name</string>
    <string name="last_name_setter">LastNameSetter</string>
    <string name="last_name_setter_hint">Last Name</string>
    <string name="log_out_button_text">Log Out</string>
    <string name="done_button_text">Done</string>
    <string name="title_activity_after_profile_welcome">AfterProfileWelcome</string>
    <string name="intro_text_hello">Hello</string>
    <string name="next_button_in_courses_view">Next</string>
    <string name="loading_courses_text">Loading Courses...</string>
    <string name="title_activity_maps">Map</string>
    <string name="signed_in_fmt">Signed in as: %s</string>

    
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
