<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="danisharsalan.studybuddy.MainActivity">

    <Button
        android:text="@string/log_out_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logOutButton"
        android:layout_marginBottom="62dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:layout_height="100dp"
        android:id="@+id/profilePicSetter"
        android:layout_width="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/profile_pic_setter"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:hint="@string/last_name_setter_hint"
        android:id="@+id/last_name"
        android:layout_alignBottom="@+id/profilePicSetter"
        android:layout_toRightOf="@+id/profilePicSetter"
        android:layout_toEndOf="@+id/profilePicSetter" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:hint="@string/first_name_setter_hint"
        android:id="@+id/first_name"
        android:layout_above="@+id/last_name"
        android:layout_toRightOf="@+id/profilePicSetter"
        android:layout_toEndOf="@+id/profilePicSetter" />
</RelativeLayout>
