<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_main"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/StudBudMainColor"
    tools:context="danisharsalan.studybuddy.PersonalProfile">

    <!-- TODO: Update blank fragment layout -->

        <ImageButton
            android:id="@+id/profilePicSetter"
            android:background="@drawable/circlepropic"
            android:layout_height="100dp"
            android:layout_width="100dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/profile_pic_setter"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:ems="10"
            android:hint="@string/first_name_setter_hint"
            android:textColorHint="@color/transparent_white"
            android:id="@+id/first_name"
            android:layout_above="@+id/last_name"
            android:layout_toRightOf="@+id/profilePicSetter"
            android:layout_toEndOf="@+id/profilePicSetter" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:ems="10"
            android:hint="@string/last_name_setter_hint"
            android:textColorHint="@color/transparent_white"
            android:id="@+id/last_name"
            android:layout_alignBottom="@+id/profilePicSetter"
            android:layout_toRightOf="@+id/profilePicSetter"
            android:layout_toEndOf="@+id/profilePicSetter" />

        <Button
            android:text="@string/done_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/roundedbutton"
            android:textColor="@color/white"
            android:id="@+id/donebutton"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="35dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingBottom="15dp"
            android:id="@+id/courseListScroll"
            android:layout_below="@+id/desc_edittext"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/linlay">


            </LinearLayout>
        </ScrollView>

        <EditText
            android:inputType="textMultiLine"
            android:lines="8"
            android:minLines="6"
            android:gravity="top|left"
            android:maxLines="10"
            android:id="@+id/desc_edittext"
            android:maxLength="250"
            android:layout_marginTop="18dp"
            android:layout_width="fill_parent"
            android:background="@drawable/roundedbutton"
            android:backgroundTint="@color/transparent_white"
            android:scrollbars="vertical"
            android:hint="What are your study habits? Write something about youself. (Limit: 250)"
            android:paddingBottom="10dp"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:layout_below="@+id/profilePicSetter"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_height="wrap_content" />



</RelativeLayout>
